Adiendo mi proyecto de Ferreteria

--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
 
                     <section class="card" data-aos="fade-up-right">
                         <div class="face front">
-                            <img src="./images/App Commerce.png" alt="" class="card__img">
-                            <h3 class="front__title">Bootstrap</h3>
+                            <img src="./images/Proyecto Ferreteria/Minimarket.png" alt="" class="card__img img__ferreteria">
+                            <h3 class="front__title">VBA Excel</h3>
                         
                         </div>
                         <div class="face back">
-                            <h3 class="back__title">Cafeteria</h3>
-                            <p class="face__paragraph">Pagina web de Cafeteria hecho con HTML, CSS y JavaScript</p>
+                            <h3 class="back__title">Sistema de Ventas</h3>
+                            <p class="face__paragraph">Aplicativo de sistemas de ventas hecho con VBA Excel</p>
                             <div class="face__links">
                                 <a href="https://tudeveloperweb.github.io/Proyecto_4/" target="_blanck" class="project__link">
                                     <i class="fa-solid fa-eye"></i>
@@ -277,7 +277,7 @@
                                 <a href="https://github.com/TuDeveloperWeb/Proyecto_4" target="_blanck"  class="project__link">
                                     <i class="fa-brands fa-github"></i>
                                     <span>GitHub </span>
-                                </a>
+                                </a>            
                             </div>
                         </div>
                     </section>
@@ -312,8 +312,8 @@
                         
                         </div>
                         <div class="face back">
-                            <h3 class="back__title">Cafeteria</h3>
-                            <p class="face__paragraph">Proyecto de Inteligencia de Negocios hecho con Power Bi</p>
+                            <h3 class="back__title">Inteligencia de Negocios</h3>
+                            <p class="face__paragraph">Proyecto de Inteligencia de Negocios hecho con la herramienta de Power Bi</p>
                             <div class="face__links">
                                 <a href="https://app.powerbi.com/view?r=eyJrIjoiOThlNGRlYzktYzU1MS00OGVlLWI3NGUtMjdlMWY3M2RmZjczIiwidCI6IjY3NzcwYzYyLWExZjgtNDdiMy1iMjQ4LWMzYmFiZGNkZmU2NyJ9" class="project__link" target="_blanck" >
                                     <i class="fa-solid fa-eye"></i>
