--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
                             <h3 class="back__title">Sistema de Ventas</h3>
                             <p class="face__paragraph">Aplicativo de sistemas de ventas hecho con VBA Excel</p>
                             <div class="face__links">
-                                <a href="https://tudeveloperweb.github.io/Proyecto_4/" target="_blanck" class="project__link">
+                                <a href="#" target="_blanck" class="project__link">
                                     <i class="fa-solid fa-eye"></i>
                                     <span>Ver Proyecto </span>
                                 </a>
 
-                                <a href="https://github.com/TuDeveloperWeb/Proyecto_4" target="_blanck"  class="project__link">
+                                <a href="https://github.com/TuDeveloperWeb/Minimarket/tree/main" target="_blanck"  class="project__link">
                                     <i class="fa-brands fa-github"></i>
                                     <span>GitHub </span>
                                 </a>            
@@ -328,7 +328,7 @@
                         </div>
                     </section>
                 </div>
-                <div class="button__projects">
+                <!-- <div class="button__projects">
                    
                     <a href="#" class="button__add" data-aos="fade-up" >
                         <i class="fa-solid fa-angle-right"></i>
@@ -336,7 +336,7 @@
                         <span class="arrow__button">Ver más</span>
                     </a>
 
-                </div>
+                </div> -->
                 
             </div>
         </section>
