Se agrego el proyecto de Power Bi

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                     <span>Ver Proyecto </span>
                                 </a>
 
-                                <a href="#" class="project__link">
+                                <a href="https://github.com/TuDeveloperWeb/Dashboard/tree/master" target="_blanck" class="project__link">
                                     <i class="fa-brands fa-github"></i>
                                     <span>GitHub </span>
                                 </a>
