--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio</title>
 
     <!-- normalize -->
     <link rel="stylesheet" href="./css/normalize.css">
@@ -261,7 +261,7 @@
 
                     <section class="card" data-aos="fade-up-right">
                         <div class="face front">
-                            <img src="./images/Proyecto Ferreteria/Minimarket.png" alt="" class="card__img img__ferreteria">
+                            <img src="./images/Proyecto Ferreteria/PRODUCTOS.png" alt="" class="card__img img__ferreteria">
                             <h3 class="front__title">VBA Excel</h3>
                         
                         </div>
@@ -269,7 +269,7 @@
                             <h3 class="back__title">Sistema de Ventas</h3>
                             <p class="face__paragraph">Aplicativo de sistemas de ventas hecho con VBA Excel</p>
                             <div class="face__links">
-                                <a href="#" target="_blanck" class="project__link">
+                                <a href="./proyectos.html" target="_blanck" class="project__link">
                                     <i class="fa-solid fa-eye"></i>
                                     <span>Ver Proyecto </span>
                                 </a>
@@ -307,7 +307,7 @@
 
                     <section class="card" data-aos="fade-up-left">
                         <div class="face front">
-                            <img src="./Power Bi inicio.jpg"  class="card__img  powerbi__img">
+                            <img src="./images/Proyecto_PowerBi/Power Bi inicio.jpg"  class="card__img  powerbi__img">
                             <h3 class="front__title">Power Bi</h3>
                         
                         </div>
