Se modifico el proyecto de sistema

--- a/proyectos.html
+++ b/proyectos.html
@@ -22,16 +22,16 @@
             <nav class=" nav container">
                 <ul class="nav__link nav__link--menu ">
                     <li class="nav__items">
-                        <a href="#" class="nav__links nav__links--color">Inicio</a>
+                        <a href="./index.html" class="nav__links nav__links--color">Inicio</a>
                     </li>
                     <li class="nav__items">
-                        <a href="index.html" class="nav__links">Resumen</a>
+                        <a href="./index.html#about" class="nav__links">Resumen</a>
                     </li>
                     <li class="nav__items">
-                        <a href="#projects" class="nav__links">Portafolio</a>
+                        <a href="./index.html#projects " class="nav__links">Portafolio</a>
                     </li>
                     <li class="nav__items">
-                        <a href="#contact" class="nav__links">Contacto</a>
+                        <a href="./index.html#contact" class="nav__links">Contacto</a>
                     </li>
 
                     <img src="./images/close.svg" class="nav__close">
@@ -53,7 +53,7 @@
                 <div class="project__content">
                     <h3 class="name__project">Sistema de Venta </h3>
                     <p class="projec__description">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis eum nostrum porro repudiandae, reprehenderit reiciendis alias aperiam ea repellat consequuntur quae minima. Dolore vel quaerat assumenda sunt modi accusantium neque!
+                        Con este sistema hecho en VBA Excel  se tendrá el control de sus ventas (imprimir comprobantes de pago, facturas, boletas), clientes, productos ,proveedores y otros.
                     </p>
                 </div>
 
