--- a/index.html
+++ b/index.html
@@ -188,15 +188,40 @@
                 <hr class="barra">
 
                 <div class="main__projects">
+
                     <section class="card" data-aos="fade-up-right">
+                        <div class="face front">
+                            <img src="./images/Proyecto Requisicion/sesion.png" alt="" class="card__img img__Requisicion">
+                            <h3 class="front__title">PHP y Laravel </h3>
+                        
+                        </div>
+                        <div class="face back">
+                            <h3 class="back__title">Sistema de Requisicion</h3>
+                            <p class="face__paragraph">Aplicativo de sistemas de Requisicion hecho con PHP y Laravel </p>
+                            <div class="face__links">
+                                <a href="./proyecto2.html" target="_blanck" class="project__link">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <span>Ver Proyecto </span>
+                                </a>
+
+                                <a href="https://github.com/TuDeveloperWeb/Minimarket/tree/main" target="_blanck"  class="project__link">
+                                    <i class="fa-brands fa-github"></i>
+                                    <span>GitHub </span>
+                                </a>            
+                            </div>
+                        </div>
+                    </section>
+
+
+                    <!-- <section class="card" data-aos="fade-up-right">
                         <div class="face front">
                             <img src="./images/Mage Page.png" alt="" class="card__img">
                             <h3 class="front__title">Html, Css, JavaScript</h3>
                         
                         </div>
                         <div class="face back">
-                            <h3 class="back__title">Cafeteria</h3>
-                            <p class="face__paragraph">Pagina web de Cafeteria hecho con HTML, CSS y JavaScript</p>
+                            <h3 class="back__title">Magic Page</h3>
+                            <p class="face__paragraph">Pagina web de Magic Page hecho con HTML, CSS y JavaScript</p>
                             <div class="face__links">
                                 <a href="https://tudeveloperweb.github.io/Proyecto1/" target="_blanck" class="project__link">
                                     <i class="fa-solid fa-eye"></i>
@@ -209,7 +234,7 @@
                                 </a>
                             </div>
                         </div>
-                    </section>
+                    </section> -->
 
                     <section class="card" data-aos="fade-up">
                         <div class="face front">
@@ -313,7 +338,7 @@
                             <h3 class="back__title">Inteligencia de Negocios</h3>
                             <p class="face__paragraph">Proyecto de Inteligencia de Negocios hecho con la herramienta de Power Bi</p>
                             <div class="face__links">
-                                <a href="https://app.powerbi.com/view?r=eyJrIjoiOThlNGRlYzktYzU1MS00OGVlLWI3NGUtMjdlMWY3M2RmZjczIiwidCI6IjY3NzcwYzYyLWExZjgtNDdiMy1iMjQ4LWMzYmFiZGNkZmU2NyJ9" class="project__link" target="_blanck" >
+                                <a href="https://app.powerbi.com/view?r=eyJrIjoiNTZjNjQ0NzgtZTQ5OC00YzM2LTk0MzUtMDYyNjkwOWU0YmRhIiwidCI6ImI2MzEyMzYxLWIzMzItNDY3Zi1hM2E1LWNmYjM5NTI4NWYyZSJ9&pageName=ReportSection9c070f4d578ca291c1cb" class="project__link" target="_blanck" >
                                     <i class="fa-solid fa-eye"></i>
                                     <span>Ver Proyecto </span>
                                 </a>
