--- a/index.html
+++ b/index.html
@@ -73,8 +73,17 @@
             <div class="about__main">
                 <div class="about__description"  >
                     <p class="about__presentation " data-aos="fade-right" >
-                        Soy un egresado en Ingeniería de Sistemas de la Universidad Nacional del Callao, Cuento con amplios conocimientos en el área de Administración de Base de Datos, así como también conocimientos intermedios  en desarrollo de páginas web y programación. Proactivo, sinérgico y con ganas de aprender y trabajar en equipo para alcanzar un determinado objetivo.
-                    </p>
+                        Soy bachiller en Ingeniería de Sistemas de la 
+                        Universidad Nacional del Callao, con experiencia 
+                        consolidada en el desarrollo de software. 
+                        Mi enfoque se centra en la creación de 
+                        aplicaciones web que no solo sean escalables, 
+                        sino también de alta calidad, brindando 
+                        soluciones tecnológicas efectivas y eficientes. 
+                        Proactivo, sinérgico y con ganas de aprender y 
+                        trabajar en equipo para alcanzar un determinado 
+                        objetivo
+                                            </p>
                     <a href="./CURRICULUM VITAE.pdf"  download="" class="about__cv" data-aos="fade-up" >
                         <span class="download__cv">Descargar CV</span> 
                         <i class="fa-solid fa-download"></i>  
